--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,9 @@ services:
     build: .
     ports:
       - "5001:5000"
-    environment:
-      - APP_SECRET = my-hardcoded-secret
+    secrets:
+      - app_secret
+
+secrets:
+  app_secret:
+    file: ./secrets/app_secret.txt
