--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,12 @@ name: CI - Build and Push
 on:
   push:
     branches: [ main ]
+    # Trigger when following things change
     paths:
       - 'app.py'
       - 'requirements.txt'
       - 'Dockerfile'
+      - '.github/workflows/'
 
 jobs:
   build:
@@ -33,4 +35,4 @@ jobs:
         push: true
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/devops-flask-demo:latest
-          ${{ secrets.DOCKERHUB_TOKEN }}/devops-flask-demo:${{ github.sha }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/devops-flask-demo:${{ github.sha }}
