--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - 'app.py'
       - 'requirements.txt'
       - 'Dockerfile'
-      - '.github/workflows/'
+      - '.github/workflows/ci.yml'
 
 jobs:
   build:
